@@ -1076,6 +1076,128 @@ operator|+
 literal|3
 return|;
 block|}
+comment|/** Fill the provided {@link BytesRef} with the bytes at the specified offset/length slice.    *  This will avoid copying the bytes, if the slice fits into a single block; otherwise, it uses    *  the provided {@linkl BytesRefBuilder} to copy bytes over. */
+DECL|method|setBytesRef
+name|void
+name|setBytesRef
+parameter_list|(
+name|BytesRefBuilder
+name|builder
+parameter_list|,
+name|BytesRef
+name|result
+parameter_list|,
+name|long
+name|offset
+parameter_list|,
+name|int
+name|length
+parameter_list|)
+block|{
+name|result
+operator|.
+name|length
+operator|=
+name|length
+expr_stmt|;
+name|int
+name|bufferIndex
+init|=
+call|(
+name|int
+call|)
+argument_list|(
+name|offset
+operator|>>
+name|BYTE_BLOCK_SHIFT
+argument_list|)
+decl_stmt|;
+name|byte
+index|[]
+name|buffer
+init|=
+name|buffers
+index|[
+name|bufferIndex
+index|]
+decl_stmt|;
+name|int
+name|pos
+init|=
+call|(
+name|int
+call|)
+argument_list|(
+name|offset
+operator|&
+name|BYTE_BLOCK_MASK
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|pos
+operator|+
+name|length
+operator|<=
+name|BYTE_BLOCK_SIZE
+condition|)
+block|{
+comment|// common case where the slice lives in a single block: just reference the buffer directly without copying
+name|result
+operator|.
+name|bytes
+operator|=
+name|buffer
+expr_stmt|;
+name|result
+operator|.
+name|offset
+operator|=
+name|pos
+expr_stmt|;
+block|}
+else|else
+block|{
+comment|// uncommon case: the slice spans at least 2 blocks, so we must copy the bytes:
+name|builder
+operator|.
+name|grow
+argument_list|(
+name|length
+argument_list|)
+expr_stmt|;
+name|result
+operator|.
+name|bytes
+operator|=
+name|builder
+operator|.
+name|get
+argument_list|()
+operator|.
+name|bytes
+expr_stmt|;
+name|result
+operator|.
+name|offset
+operator|=
+literal|0
+expr_stmt|;
+name|readBytes
+argument_list|(
+name|offset
+argument_list|,
+name|result
+operator|.
+name|bytes
+argument_list|,
+literal|0
+argument_list|,
+name|length
+argument_list|)
+expr_stmt|;
+block|}
+block|}
 comment|// Fill in a BytesRef from term's length& bytes encoded in
 comment|// byte block
 DECL|method|setBytesRef
