@@ -469,6 +469,101 @@ name|lastElement
 argument_list|)
 throw|;
 block|}
+comment|/** Used only by sort below, to set a {@link BytesRef} with the specified slice, avoiding copying bytes in the common case when the slice    *  is contained in a single block in the byte block pool. */
+DECL|method|setBytesRef
+specifier|private
+name|void
+name|setBytesRef
+parameter_list|(
+name|BytesRefBuilder
+name|spare
+parameter_list|,
+name|BytesRef
+name|result
+parameter_list|,
+name|int
+name|index
+parameter_list|)
+block|{
+if|if
+condition|(
+name|index
+operator|<
+name|lastElement
+condition|)
+block|{
+name|int
+name|offset
+init|=
+name|offsets
+index|[
+name|index
+index|]
+decl_stmt|;
+name|int
+name|length
+decl_stmt|;
+if|if
+condition|(
+name|index
+operator|==
+name|lastElement
+operator|-
+literal|1
+condition|)
+block|{
+name|length
+operator|=
+name|currentOffset
+operator|-
+name|offset
+expr_stmt|;
+block|}
+else|else
+block|{
+name|length
+operator|=
+name|offsets
+index|[
+name|index
+operator|+
+literal|1
+index|]
+operator|-
+name|offset
+expr_stmt|;
+block|}
+name|pool
+operator|.
+name|setBytesRef
+argument_list|(
+name|spare
+argument_list|,
+name|result
+argument_list|,
+name|offset
+argument_list|,
+name|length
+argument_list|)
+expr_stmt|;
+block|}
+else|else
+block|{
+throw|throw
+operator|new
+name|IndexOutOfBoundsException
+argument_list|(
+literal|"index "
+operator|+
+name|index
+operator|+
+literal|" must be less than the size: "
+operator|+
+name|lastElement
+argument_list|)
+throw|;
+block|}
+block|}
 DECL|method|sort
 specifier|private
 name|int
@@ -593,24 +688,32 @@ index|[
 name|j
 index|]
 decl_stmt|;
+name|setBytesRef
+argument_list|(
+name|scratch1
+argument_list|,
+name|scratchBytes1
+argument_list|,
+name|idx1
+argument_list|)
+expr_stmt|;
+name|setBytesRef
+argument_list|(
+name|scratch2
+argument_list|,
+name|scratchBytes2
+argument_list|,
+name|idx2
+argument_list|)
+expr_stmt|;
 return|return
 name|comp
 operator|.
 name|compare
 argument_list|(
-name|get
-argument_list|(
-name|scratch1
+name|scratchBytes1
 argument_list|,
-name|idx1
-argument_list|)
-argument_list|,
-name|get
-argument_list|(
-name|scratch2
-argument_list|,
-name|idx2
-argument_list|)
+name|scratchBytes2
 argument_list|)
 return|;
 block|}
@@ -633,11 +736,11 @@ index|[
 name|i
 index|]
 decl_stmt|;
-name|pivot
-operator|=
-name|get
+name|setBytesRef
 argument_list|(
 name|pivotBuilder
+argument_list|,
+name|pivot
 argument_list|,
 name|index
 argument_list|)
@@ -662,6 +765,15 @@ index|[
 name|j
 index|]
 decl_stmt|;
+name|setBytesRef
+argument_list|(
+name|scratch2
+argument_list|,
+name|scratchBytes2
+argument_list|,
+name|index
+argument_list|)
+expr_stmt|;
 return|return
 name|comp
 operator|.
@@ -669,18 +781,36 @@ name|compare
 argument_list|(
 name|pivot
 argument_list|,
-name|get
-argument_list|(
-name|scratch2
-argument_list|,
-name|index
-argument_list|)
+name|scratchBytes2
 argument_list|)
 return|;
 block|}
 specifier|private
+specifier|final
 name|BytesRef
 name|pivot
+init|=
+operator|new
+name|BytesRef
+argument_list|()
+decl_stmt|;
+specifier|private
+specifier|final
+name|BytesRef
+name|scratchBytes1
+init|=
+operator|new
+name|BytesRef
+argument_list|()
+decl_stmt|;
+specifier|private
+specifier|final
+name|BytesRef
+name|scratchBytes2
+init|=
+operator|new
+name|BytesRef
+argument_list|()
 decl_stmt|;
 specifier|private
 specifier|final
@@ -690,13 +820,19 @@ init|=
 operator|new
 name|BytesRefBuilder
 argument_list|()
-decl_stmt|,
+decl_stmt|;
+specifier|private
+specifier|final
+name|BytesRefBuilder
 name|scratch1
 init|=
 operator|new
 name|BytesRefBuilder
 argument_list|()
-decl_stmt|,
+decl_stmt|;
+specifier|private
+specifier|final
+name|BytesRefBuilder
 name|scratch2
 init|=
 operator|new
@@ -754,6 +890,14 @@ name|BytesRefBuilder
 argument_list|()
 decl_stmt|;
 specifier|final
+name|BytesRef
+name|result
+init|=
+operator|new
+name|BytesRef
+argument_list|()
+decl_stmt|;
+specifier|final
 name|int
 name|size
 init|=
@@ -800,10 +944,11 @@ operator|<
 name|size
 condition|)
 block|{
-return|return
-name|get
+name|setBytesRef
 argument_list|(
 name|spare
+argument_list|,
+name|result
 argument_list|,
 name|indices
 operator|==
@@ -818,6 +963,9 @@ name|pos
 operator|++
 index|]
 argument_list|)
+expr_stmt|;
+return|return
+name|result
 return|;
 block|}
 return|return
