@@ -703,6 +703,11 @@ name|right
 parameter_list|)
 block|{
 comment|// Make shallow copy in case decode changes the BytesRef:
+assert|assert
+name|left
+operator|!=
+name|right
+assert|;
 name|leftScratch
 operator|.
 name|bytes
@@ -1354,6 +1359,14 @@ argument_list|(
 name|scratch
 operator|.
 name|bytes
+argument_list|,
+name|scratch
+operator|.
+name|offset
+argument_list|,
+name|scratch
+operator|.
+name|length
 argument_list|)
 expr_stmt|;
 name|tmpInput
@@ -1372,7 +1385,9 @@ name|scratch
 operator|.
 name|length
 operator|-=
-literal|8
+name|Long
+operator|.
+name|BYTES
 expr_stmt|;
 comment|// long
 return|return
@@ -1405,6 +1420,14 @@ argument_list|(
 name|scratch
 operator|.
 name|bytes
+argument_list|,
+name|scratch
+operator|.
+name|offset
+argument_list|,
+name|scratch
+operator|.
+name|length
 argument_list|)
 expr_stmt|;
 name|tmpInput
@@ -1466,6 +1489,10 @@ name|setPosition
 argument_list|(
 name|scratch
 operator|.
+name|offset
+operator|+
+name|scratch
+operator|.
 name|length
 operator|-
 literal|2
@@ -1489,6 +1516,10 @@ name|tmpInput
 operator|.
 name|setPosition
 argument_list|(
+name|scratch
+operator|.
+name|offset
+operator|+
 name|scratch
 operator|.
 name|length
@@ -1562,6 +1593,14 @@ argument_list|(
 name|scratch
 operator|.
 name|bytes
+argument_list|,
+name|scratch
+operator|.
+name|offset
+argument_list|,
+name|scratch
+operator|.
+name|length
 argument_list|)
 expr_stmt|;
 name|tmpInput
@@ -1585,10 +1624,21 @@ name|readShort
 argument_list|()
 decl_stmt|;
 comment|// read payload size
+assert|assert
+name|payloadLength
+operator|>=
+literal|0
+operator|:
+name|payloadLength
+assert|;
 name|tmpInput
 operator|.
 name|setPosition
 argument_list|(
+name|scratch
+operator|.
+name|offset
+operator|+
 name|scratch
 operator|.
 name|length
