@@ -9,6 +9,11 @@ http://s.apache.org/luceneversions
 ======================= Lucene 6.1.0 =======================
 (No Changes)
 
+Optimizations
+
+* LUCENE-7071: Reduce bytes copying in OfflineSorter, giving ~10%
+  speedup on merging 2D LatLonPoint values (Mike McCandless)
+
 ======================= Lucene 6.0.0 =======================
 
 System Requirements
